@@ -1,0 +1,2 @@
+DROP INDEX script_hash ON changes;
+ALTER TABLE changes ADD UNIQUE(project, script_hash);
